utilisation de plusieurs controlleurs

--- a/app.html
+++ b/app.html
@@ -3,9 +3,14 @@
 		<meta charset="UTF-8">
 		<script type="text/javascript" src="angular.js"></script>
 		<script type="text/javascript" src="app.js"></script>
+
+		<!-- Controllers -->
+		<script type="text/javascript" src="src/controllers/categoryController.js"></script>
 	</head>
 
 	<body ng-app="collectify">
-
+		<div ng-controller="categoryCreate">
+			{{ test }}
+		</div>
 	</body>
 </html>
