--- a/app.html
+++ b/app.html
@@ -6,11 +6,17 @@
 
 		<!-- Controllers -->
 		<script type="text/javascript" src="src/controllers/categoryController.js"></script>
+		<script type="text/javascript" src="src/controllers/itemController.js"></script>
+
+		<!-- Directives -->
+		<script type="text/javascript" src="src/directives/itemDecoratorDirective.js"></script>
 	</head>
 
 	<body ng-app="collectify">
-		<div ng-controller="categoryCreate">
-			{{ test }}
+		<div ng-controller="itemList">
+			<div ng-repeat="item in items">
+				<p decorate-item></p>
+			</div>
 		</div>
 	</body>
 </html>
