utilisation des services

--- a/app.html
+++ b/app.html
@@ -10,6 +10,10 @@
 
 		<!-- Directives -->
 		<script type="text/javascript" src="src/directives/itemDecoratorDirective.js"></script>
+
+		<!-- Services -->
+		<script type="text/javascript" src="src/services/itemProvider.js"></script>
+		<script type="text/javascript" src="src/services/categoryProvider.js"></script>
 	</head>
 
 	<body ng-app="collectify">
