--- a/app.html
+++ b/app.html
@@ -1,8 +1,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<script type="text/javascript" src="angular.js"></script>
+		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+		<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="routing.js"></script>
 
 		<!-- Controllers -->
 		<script type="text/javascript" src="src/controllers/categoryController.js"></script>
@@ -13,14 +15,9 @@
 
 		<!-- Services -->
 		<script type="text/javascript" src="src/services/itemProvider.js"></script>
-		<script type="text/javascript" src="src/services/categoryProvider.js"></script>
 	</head>
 
 	<body ng-app="collectify">
-		<div ng-controller="itemList">
-			<div ng-repeat="item in items">
-				<p decorate-item></p>
-			</div>
-		</div>
+		<div ng-view></div>
 	</body>
 </html>
